--- a/Bookmarks/ja.lproj/InfoPlist.strings
+++ b/Bookmarks/ja.lproj/InfoPlist.strings
@@ -1,2 +1,4 @@
 /* Localized versions of Info.plist keys */
 
+"BookmarksDocumentInNursery"="ブックマークドキュメント";
+"BookmarksDocumentInPlist"="ブックマークドキュメント(プロパティリスト)";
